<resources>
    <string name="app_name">gb_android1_project</string>
    <string name="hello">Hello</string>
    <string name="world">world</string>
    <string name="ok">OK</string>
    <string name="name">name</string>
    <string name="age">age</string>
    <string name="phone_number">phone number</string>
    <string name="email">email</string>
    <string name="not_a_qwerty">not a qwerty</string>
    <string name="password">password</string>
    <string name="warning">Please, fill the fileds first!</string>
    <string name="about_the_person">About the person</string>
    <string name="show_message">show message</string>
</resources>