<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/linear_layout_horizontal_name_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:hint="@string/name"
            android:inputType="textPersonName"
            tools:text="Name" />

        <EditText
            android:id="@+id/age_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"

            android:layout_margin="8dp"

            android:layout_weight="1"
            android:hint="@string/age"
            android:inputType="numberDecimal"
            tools:text="25" />
    </LinearLayout>

    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        tools:text="+7123456789" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:text="email@email.com" />

    <CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/message_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:hint="@string/about_the_person"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="About the person" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/show_message" />

</LinearLayout>