<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_launcher_background"
        android:padding="@android:dimen/app_icon_size"
        android:text="@string/hello"
        android:textAlignment="textStart"
        android:textColor="@color/design_default_color_primary"
        android:textSize="48sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="92dp"
        android:paddingEnd="10dp"
        android:text="@string/world"
        android:textAlignment="textEnd"
        android:textColor="#009688"
        android:textSize="48sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="aaaaaaa"
        android:hint="hint"
        android:inputType="text"
        tools:text="my edit text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>